crates/vize_atelier_vapor/src/tests_source_map/snapshots/vize_atelier_vapor__tests_source_map__component_names__component_names_dynamic_map.snap
---
source: crates/vize_atelier_vapor/src/tests_source_map/component_names.rs
expression: segments
---
[
    "2:0 \"export f\" -> \"<compone\"",
]
