crates/vize_atelier_vapor/src/tests_source_map/snapshots/vize_atelier_vapor__tests_source_map__component_names__component_names_indexed_code.snap
---
source: crates/vize_atelier_vapor/src/tests_source_map/component_names.rs
expression: code
---
import { resolveComponent as _resolveComponent, createComponentWithFallback as _createComponentWithFallback, toHandlerKey as _toHandlerKey } from 'vue';

export function render(_ctx) {
  const _component_Child = _resolveComponent("Child")
  const n0 = _createComponentWithFallback(_component_Child, { $: [
    () => ({ [(_ctx.names[_ctx.selected])]: _ctx.value }),
    () => ({ [(_toHandlerKey(_ctx.events[_ctx.selected]))]: $event => (_ctx.record(_ctx.value)) })
  ] }, null, true)
  return n0
}
